--- a/src/stories/UnitCard.css
+++ b/src/stories/UnitCard.css
@@ -16,9 +16,18 @@
   src: url('assets/aero-matics-light.woff') format('woff');
 }
 
+@font-face {
+  font-family: 'Legion Icons';
+  /* TODO: Inline this or use a CDN. */
+  src: url('assets/legion-icons.woff') format('woff');
+}
+
 .unit-card {
   background: #ccc;
+  border-radius: 10px;
   font-family: 'Aero Matics Regular';
+  width: 418px;
+  height: 300px;
 }
 
 .unit-card strong {
@@ -30,4 +39,210 @@
   font-size: x-small;
   font-style: normal;
   text-transform: uppercase;
+}
+
+.unit-card header {
+  display: flex;
+  height: 40px;
+}
+
+.unit-card header > .rank-and-minis {
+  background: #888;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  color: #fff;
+  line-height: 15px;
+}
+
+.unit-card header > .rank-and-minis > .rank {
+  font-family: 'Legion Icons';
+  font-size: larger;
+  padding: 5px;
+}
+
+.unit-card header > .rank-and-minis > .minis {
+  background: #333;
+  font-size: x-small;
+}
+
+.unit-card header > .title {
+  background: #f0f0f0;
+  line-height: 10px;
+  flex: 1;
+  text-align: center;
+}
+
+.unit-card header > .title > strong {
+  display: block;
+  padding-top: 10px;
+  letter-spacing: 0.5px;
+}
+
+.unit-card aside.stats {
+  float: right;
+  width: 95px;
+  height: 100%;
+}
+
+.unit-card aside.stats .icon {
+  font-family: 'Legion Icons';
+  font-weight: normal;
+}
+
+.unit-card aside.stats > .image-and-type {
+  border-radius: 0px 10px 0px 0px;
+  width: 95px;
+  height: 95px;
+  background: #333;
+}
+
+.unit-card aside.stats > .image-and-type > img {
+  height: 80px;
+  width: 95px;
+  background: #aaa;
+  border-image-width: 0;
+  border-radius: 0px 10px 0px 0px;
+}
+
+.unit-card aside.stats > .image-and-type > .type {
+  color: #fff;
+  font-family: 'Aero Matics Light';
+  font-size: xx-small;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.unit-card aside.stats > .defensive {
+  height: 60px;
+}
+
+.unit-card aside.stats > .defensive > .dice {
+  float: left;
+  height: 75px;
+  width: 30px;
+  background: #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: large;
+}
+
+.unit-card aside.stats > .defensive > .dice.red {
+  color: #90181e;
+  text-shadow: 0px 1px #fff;
+}
+
+.unit-card aside.stats > .defensive > .dice.white {
+  color: #fff;
+}
+
+.unit-card aside.stats > .defensive > .health {
+  background: #202020;
+  padding: 10px 5px;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.unit-card aside.stats > .defensive > .health > .wounds {
+  color: #5eba49;
+  text-align: center;
+}
+
+.unit-card aside.stats > .defensive > .health > .mitigation {
+  color: #faf322;
+  text-align: center;
+}
+
+.unit-card aside.stats > .defensive > .surges {
+  background: #999;
+}
+
+.unit-card aside.stats > .defensive > .surges > div {
+  background: #222;
+  color: #fff;
+  height: 23px;
+  border: 1px solid #333;
+  display: flex;
+}
+
+.unit-card aside.stats > .defensive > .surges > div > span {
+  flex: 1;
+  text-shadow: 0px 1px #000;
+  text-align: center;
+  font-size: large;
+}
+
+.unit-card aside.stats > .defensive > .speed {
+  background: #999;
+  height: 19px;
+  display: flex;
+  align-items: center;
+}
+
+.unit-card aside.stats > .defensive > .speed > .bar {
+  background: #4c141b;
+  border: 1px solid #000;
+  height: 7px;
+  flex: 1;
+  margin: 2px 2px;
+}
+
+.unit-card aside.stats > .defensive > .speed > .bar.lit {
+  background: #e64388;
+  border: 1px solid #000;
+  height: 7px;
+  flex: 1;
+  margin: 2px 2px;
+}
+
+.unit-card aside.upgrades {
+  border-radius: 10px 0px 0px 10px;
+  float: left;
+  width: 50px;
+  height: 100%;
+  background: #333;
+}
+
+.unit-card aside.upgrades > .logo {
+  display: flex;
+  border-radius: 10px 0px 0px 0px;
+  background: #888;
+  height: 40px;
+  align-items: center;
+  justify-content: center;
+}
+
+.unit-card aside.upgrades > .logo .icon {
+  height: 30px;
+  width: 30px;
+}
+
+.unit-card aside.upgrades > .logo .icon svg {
+  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.7));
+}
+
+.unit-card aside.upgrades > .points {
+  background: #dfeff0;
+  border: 1px solid #307776;
+  height: 15px;
+  text-align: center;
+  font-size: small;
+}
+
+.unit-card aside.upgrades > .slots {
+  color: #fff;
+  font-family: 'Legion Icons';
+  font-size: xx-large;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  text-shadow: 0px 2px #000;
+}
+
+.unit-card main {
+  background: #fff;
+  height: 200px;
+  width: 322px;
 }
