--- a/src/stories/UnitCard.scss
+++ b/src/stories/UnitCard.scss
@@ -54,6 +54,7 @@ $cardHeight: 300px;
         font-family: 'Legion Icons';
         font-size: larger;
         padding: 5px;
+        text-shadow: 0px 1px #000;
       }
 
       & > .minis {
@@ -100,6 +101,7 @@ $cardHeight: 300px;
       background: #333;
 
       & > .art {
+        display: flex;
         height: 80px;
         width: 100%;
         background: #aaa;
@@ -119,9 +121,12 @@ $cardHeight: 300px;
 
       & > .type {
         color: $darkBgTextColor;
-        line-height: 15px;
         font-family: 'Aero Matics Light';
         font-size: xx-small;
+        height: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         text-align: center;
         text-transform: uppercase;
       }
