--- a/src/stories/UnitCard.scss
+++ b/src/stories/UnitCard.scss
@@ -14,6 +14,11 @@
 }
 
 @font-face {
+  font-family: 'Aero Matics Light Italic';
+  src: url('assets/aero-matics-light-italic.woff') format('woff');
+}
+
+@font-face {
   font-family: 'Legion Icons';
   src: url('assets/legion-icons.woff') format('woff');
 }
@@ -28,6 +33,7 @@ $cardHeight: 300px;
 .unit-card {
   background: $backgroundColor;
   border-radius: $borderRadiusSize;
+  border: 1px solid #000;
   width: $cardWidth;
   height: $cardHeight;
 
@@ -87,7 +93,7 @@ $cardHeight: 300px;
   & > aside.stats {
     float: right;
     width: 95px;
-    height: 100%;
+    height: 230px;
 
     .icon {
       font-family: 'Legion Icons';
@@ -201,6 +207,7 @@ $cardHeight: 300px;
         & > .bar {
           background: #4c141b;
           border: 1px solid #000;
+          border-radius: 5px;
           height: 7px;
           flex: 1;
           margin: 2px 2px;
@@ -258,5 +265,157 @@ $cardHeight: 300px;
     background: #fff;
     height: 200px;
     width: 322px;
+
+    & > ul {
+      margin: 0;
+      padding: 0px 5px 0px 55px;
+      list-style: none;
+      font-size: small;
+
+      & > li {
+        padding-top: 5px;
+
+        span {
+          font-family: 'Legion Icons';
+        }
+
+        & > strong {
+          padding-right: 5px;
+        }
+
+        & > em {
+          font-family: 'Aero Matics Light Italic';
+          font-style: normal;
+
+          &:before {
+            content: '(';
+          }
+
+          &:after {
+            content: ')';
+          }
+        }
+      }
+    }
+  }
+
+  & > footer {
+    width: 418px;
+
+    & > ul {
+      list-style: none;
+      margin: 0;
+      margin-left: 50px;
+      padding: 0;
+
+      display: flex;
+      flex-direction: row;
+
+      & > li {
+        display: block;
+        flex: 1;
+        border-right: 2px solid #333;
+
+        &:last-child {
+          border-right: none;
+        }
+
+        & > strong {
+          display: block;
+          height: 15px;
+
+          font-size: x-small;
+          color: #fff;
+          font-weight: normal;
+          line-height: 15px;
+          padding: 0px 5px;
+          background: #4d4c4f;
+          letter-spacing: 0.5px;
+        }
+
+        & > figure {
+          margin: 0;
+          padding: 0;
+
+          display: flex;
+          height: 25px;
+          padding: 0px 5px;
+          background: #9b9b9b;
+
+          align-items: center;
+
+          span {
+            background: #bbb;
+            border-radius: 5px;
+            font-family: 'Legion Icons';
+            font-size: larger;
+
+            &.melee {
+              &::before {
+                content: 'a';
+                color: #90181e;
+              }
+            }
+
+            &:not(.dice) {
+              margin-right: 5px;
+            }
+
+            &.dice {
+              background: #ccc;
+              height: 6px;
+              width: 6px;
+              border-radius: 0;
+              transform: rotateX(15deg) rotateZ(45deg);
+              margin-top: -8px;
+
+              &:nth-child(odd) {
+                margin-top: 6px;
+              }
+
+              &.red {
+                background: #90181e;
+                border: 1px solid #fff;
+              }
+            }
+          }
+        }
+
+        & > section {
+          display: block;
+          background: #fff;
+          height: 20px;
+          padding: 0px 5px;
+          text-align: center;
+
+          & > ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+
+            & > li {
+              font-family: 'Aero Matics Display Regular';
+              display: inline-block;
+              font-size: small;
+
+              &::after {
+                content: ', ';
+                padding-right: 3px;
+              }
+
+              &:last-child::after {
+                content: '';
+              }
+            }
+          }
+        }
+
+        &:last-child {
+          > section {
+            border-radius: 0px 0px 10px 0px;
+          }
+        }
+      }
+    }
   }
 }
