--- a/src/stories/UnitCard.scss
+++ b/src/stories/UnitCard.scss
@@ -14,13 +14,13 @@
 }
 
 @font-face {
-  font-family: 'Aero Matics Light Italic';
-  src: url('assets/aero-matics-light-italic.woff') format('woff');
+  font-family: 'Legion Icons';
+  src: url('assets/legion-icons.woff') format('woff');
 }
 
 @font-face {
-  font-family: 'Legion Icons';
-  src: url('assets/legion-icons.woff') format('woff');
+  font-family: 'Minion Pro';
+  src: url('assets/minion-pro-italic.woff') format('woff');
 }
 
 $backgroundColor: #cccccc;
@@ -41,10 +41,6 @@ $cardHeight: 300px;
 
   strong {
     font-family: 'Aero Matics Display Regular';
-  }
-
-  em {
-    font-family: 'Aero Matics Light Italic';
   }
 
   & > header {
@@ -71,13 +67,13 @@ $cardHeight: 300px;
 
     & > .title {
       background: #f0f0f0;
-      line-height: 10px;
+      line-height: 12px;
       flex: 1;
       text-align: center;
 
       strong {
         display: block;
-        padding-top: 10px;
+        padding: 10px 20px 0px 20px;
         letter-spacing: 0.5px;
       }
 
@@ -176,6 +172,10 @@ $cardHeight: 300px;
         & > .mitigation {
           color: #faf322;
           text-align: center;
+
+          &.resilience {
+            color: #e8a33e;
+          }
         }
       }
 
@@ -284,8 +284,10 @@ $cardHeight: 300px;
         }
 
         & > em {
-          font-family: 'Aero Matics Light Italic';
+          font-family: 'Minion Pro';
           font-style: normal;
+          color: #333;
+          font-size: smaller;
 
           &:before {
             content: '(';
@@ -439,7 +441,8 @@ $cardHeight: 300px;
             & > li {
               font-family: 'Aero Matics Display Regular';
               display: inline-block;
-              font-size: small;
+              font-size: x-small;
+              font-weight: bold;
 
               &::after {
                 content: ', ';
