--- a/src/stories/embed/WeaponPool.scss
+++ b/src/stories/embed/WeaponPool.scss
@@ -22,6 +22,10 @@
 
       &::after {
         content: '-';
+        display: inline-block;
+        font-weight: bolder;
+        font-size: x-large;
+        padding: 2px;
       }
 
       &.melee {
