More embedded parts (#3)
* Add Speed/Surge/WeaponPool.

* Add DefenseStats.

* Add Points, UpgradeBar.

* Add a WeaponBar.

* Add symbolized text rendering.

--- a/src/stories/embed/WeaponPool.scss
+++ b/src/stories/embed/WeaponPool.scss
@@ -22,6 +22,10 @@
 
       &::after {
         content: '-';
+        display: inline-block;
+        font-weight: bolder;
+        font-size: x-large;
+        padding: 2px;
       }
 
       &.melee {
@@ -52,8 +56,8 @@
 
     > li {
       display: inline-block;
-      height: 8px;
-      width: 7px;
+      height: 6px;
+      width: 8px;
 
       &:nth-child(even) {
         .attack-dice-icon {
