--- a/src/stories/embed/SurgeTable.scss
+++ b/src/stories/embed/SurgeTable.scss
@@ -10,6 +10,10 @@ $hiddenColor: #76777b;
     display: flex;
     border: 2px solid $borderColor;
 
+    &:last-child {
+      border-top: 0px;
+    }
+
     &.hidden {
       background: $hiddenColor;
       border-color: darken($hiddenColor, 15);
