--- a/src/stories/icons/AttackDiceIcon.scss
+++ b/src/stories/icons/AttackDiceIcon.scss
@@ -7,12 +7,12 @@ span.attack-dice-icon {
 
   &[data-color='Red'] {
     background: #90181e;
-    border: 1px solid #aaa;
+    border: 1px solid #ddd;
   }
 
   &[data-color='Black'] {
     background: #000;
-    border: 1px solid #aaa;
+    border: 1px solid #ddd;
   }
 
   &[data-color='White'] {
