--- a/src/stories/embed/UpgradeBar.scss
+++ b/src/stories/embed/UpgradeBar.scss
@@ -1,9 +1,13 @@
 .upgrade-bar {
-  background: #2d2b2c;
+  background: #444;
   color: #fff;
-  font-size: xx-large;
+  font-size: 28px;
   margin: 0;
   padding: 0;
   list-style: none;
   text-align: center;
+
+  > li {
+    text-shadow: 0px 0px 5px #000;
+  }
 }
