--- a/src/stories/embed/WeaponPool.scss
+++ b/src/stories/embed/WeaponPool.scss
@@ -59,10 +59,15 @@
       height: 6px;
       width: 8px;
 
+      .attack-dice-icon {
+        position: absolute;
+        margin-top: -6px;
+      }
+
       &:nth-child(even) {
         .attack-dice-icon {
           position: absolute;
-          margin-top: 6px;
+          margin-top: 4px;
         }
       }
     }
