--- a/src/stories/embed/WeaponBar.scss
+++ b/src/stories/embed/WeaponBar.scss
@@ -16,15 +16,16 @@
 
   > main {
     background: #aaa;
-    padding: 5px;
+    padding: 2px;
   }
 
   > footer {
     background-color: #fff;
     font-family: 'Aero Matics Display Regular';
-    font-size: small;
-    height: 15px;
-    line-height: 15px;
+    font-size: x-small;
+    font-weight: bold;
+    height: 16px;
+    line-height: 16px;
 
     > ul {
       margin: 0;
