--- a/src/stories/icons/UpgradeIcon.scss
+++ b/src/stories/icons/UpgradeIcon.scss
@@ -54,7 +54,7 @@ span.upgrade-type-icon {
     }
   }
 
-  &[aria-label='Ordinance'] {
+  &[aria-label='Ordnance'] {
     &::before {
       content: 'J';
     }
@@ -74,7 +74,7 @@ span.upgrade-type-icon {
 
   &[aria-label='Gear'] {
     &::before {
-      content: 'F';
+      content: 'G';
     }
   }
 
