Completely replace the unit card with a new version. (#6)
* Start on a new UnitCard.

* Happy place.

* Super cleaned up cards.

--- a/src/stories/embed/SurgeTable.scss
+++ b/src/stories/embed/SurgeTable.scss
@@ -10,6 +10,10 @@ $hiddenColor: #76777b;
     display: flex;
     border: 2px solid $borderColor;
 
+    &:last-child {
+      border-top: 0px;
+    }
+
     &.hidden {
       background: $hiddenColor;
       border-color: darken($hiddenColor, 15);
@@ -20,10 +24,12 @@ $hiddenColor: #76777b;
     }
 
     > span {
+      display: flex;
       flex: 1;
       font-size: larger;
       padding: 5px;
-      text-align: center;
+      justify-content: center;
+      align-items: center;
       text-shadow: #000 1px 0 5px;
     }
   }
