--- a/src/stories/embed/WeaponBar.scss
+++ b/src/stories/embed/WeaponBar.scss
@@ -5,24 +5,27 @@
 
 .weapon {
   > header {
-    background: #515153;
+    background: #555;
     color: #fff;
     font-family: 'Aero Matics Display Regular';
     font-weight: normal;
-    font-size: small;
+    font-size: x-small;
     letter-spacing: 0.5px;
     padding: 3px;
   }
 
   > main {
-    background: #8c8c8c;
-    padding: 5px;
+    background: #aaa;
+    padding: 2px;
   }
 
   > footer {
+    background-color: #fff;
     font-family: 'Aero Matics Display Regular';
-    font-size: small;
-    padding: 5px;
+    font-size: x-small;
+    font-weight: bold;
+    height: 16px;
+    line-height: 16px;
 
     > ul {
       margin: 0;
