--- a/src/stories/cards/UnitCard.scss
+++ b/src/stories/cards/UnitCard.scss
@@ -20,7 +20,7 @@
 
 .unit-card {
   font-family: 'Minion Pro';
-  box-shadow: 0px 0px 15px 0px #000000;
+  border: 1px solid #555;
 
   width: 418px;
   height: 300px;
@@ -33,8 +33,29 @@
     border-radius: 10px 0px 0px 10px;
     display: flex;
     flex-direction: column;
-    padding-bottom: 16px;
     width: 40px;
+
+    > .menu {
+      height: 16px;
+      font-size: x-small;
+      font-family: 'Aero Matics Light';
+      font-weight: bold;
+      text-align: center;
+      line-height: 16px;
+
+      &:not(.saving) {
+        &:hover {
+          background-color: #333;
+          border-radius: 0px 0px 0px 10px;
+
+          &::before {
+            content: 'Save';
+            color: #fff;
+            cursor: pointer;
+          }
+        }
+      }
+    }
 
     > .faction-icon {
       height: 39px;
