Add click-to-replace images for mocking.

--- a/src/stories/cards/CommandCard.scss
+++ b/src/stories/cards/CommandCard.scss
@@ -86,6 +86,7 @@
     background-position: center center;
     display: flex;
     flex-direction: row-reverse;
+    cursor: pointer;
 
     &.small {
       min-height: 260px;
