--- a/src/stories/cards/UnitCard.scss
+++ b/src/stories/cards/UnitCard.scss
@@ -179,6 +179,7 @@
           background-repeat: no-repeat;
           background-position: center center;
           border-radius: 0px 10px 0px 0px;
+          cursor: pointer;
         }
 
         > .type {
