Set background image to cover for all art.

--- a/src/stories/cards/CommandCard.scss
+++ b/src/stories/cards/CommandCard.scss
@@ -84,6 +84,7 @@
     background-color: #111;
     background-repeat: no-repeat;
     background-position: center center;
+    background-size: cover;
     display: flex;
     flex-direction: row-reverse;
     cursor: pointer;
