--- a/src/stories/cards/UnitCard.scss
+++ b/src/stories/cards/UnitCard.scss
@@ -178,6 +178,7 @@
           height: 80px;
           background-repeat: no-repeat;
           background-position: center center;
+          background-size: cover;
           border-radius: 0px 10px 0px 0px;
           cursor: pointer;
         }
