--- a/src/stories/cards/UpgradeCard.scss
+++ b/src/stories/cards/UpgradeCard.scss
@@ -41,6 +41,7 @@
     height: 115px;
     background-repeat: no-repeat;
     background-position: center center;
+    background-size: cover;
     margin: 5px 5px;
     background-color: #222;
     display: flex;
