--- a/src/stories/cards/UpgradeCard.scss
+++ b/src/stories/cards/UpgradeCard.scss
@@ -13,6 +13,16 @@
   src: url('../assets/minion-pro.woff') format('woff');
 }
 
+.upgrade-card.html2canvas {
+  .wounds {
+    line-height: 20px;
+  }
+
+  > header {
+    line-height: 25px;
+  }
+}
+
 .upgrade-card {
   font-family: 'Minion Pro';
   border: 1px solid #333;
@@ -35,6 +45,12 @@
     line-height: 30px;
     text-align: center;
     height: 30px;
+
+    &.unique > div {
+      &::before {
+        content: '▪ ';
+      }
+    }
   }
 
   > .art {
@@ -113,6 +129,16 @@
     padding: 5px;
     text-align: center;
     font-size: smaller;
+
+    p {
+      text-transform: uppercase;
+      margin-top: 0;
+    }
+
+    span[role='img'] {
+      text-transform: none;
+      font-size: large;
+    }
   }
 
   > footer {
